--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login System</title>
-    <link rel="stylesheet" href="/src/styles/global.css">
+    <link rel="stylesheet" href="src/styles/global.css">
 </head>
 <body>
     <main>
@@ -12,6 +12,6 @@
         <p>Registration and login system, press the button below to begin</p>
         <button id="botao-iniciar">Start</button>
     </main>
-    <script src="/src/scripts/start.js"></script>
+    <script src="src/scripts/start.js"></script>
 </body>
 </html>
