--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -21,8 +21,8 @@
             </div>
             <button id="login-button">Login</button>
             <div class="container-inputs-extra">
-                <small>Don't have an account? <a href="../pages/register.html">click here to register</a></small>
-                <small>Forgot the password? <a href="../pages/recovery.html">click here to recover</a></small>
+                <small>Don't have an account? <a href="register.html">click here to register</a></small>
+                <small>Forgot the password? <a href="recovery.html">click here to recover</a></small>
             </div>
         </form>
     </main>
