--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -22,7 +22,7 @@
             </div>
             <button id="register-button">Register</button>
             <div class="container-inputs-extra">
-                <small>Already have an account? <a href="../pages/login.html">Log in here</a></small>
+                <small>Already have an account? <a href="login.html">Log in here</a></small>
             </div>
         </form>
     </main>
