--- a/src/pages/recovery.html
+++ b/src/pages/recovery.html
@@ -13,8 +13,8 @@
             <h2>Recovery</h2>
             <div class="container-inputs-login">
                 <input type="text" id="username-input" name="username" placeholder="Username" aria-label="username">
-                <input type="password" id="password-input" name="userPassword" placeholder="Password" aria-label="password">
-                <input type="password" id="password-confirm" name="userPasswordConfirm" placeholder="Confirm Password" aria-label="password">
+                <input type="password" id="password-input" name="userPassword" placeholder="New password" aria-label="password">
+                <input type="password" id="password-confirm" name="userPasswordConfirm" placeholder="Confirm new password" aria-label="password">
             </div>
             <div class="container-input-show">
                 <input type="checkbox" name="showCheckbox" id="checkbox-input">
